Fix alignment in top's menu
Top's menu is hidden behind the red section in the header

--- a/public/stylesheets/sites/layout.css
+++ b/public/stylesheets/sites/layout.css
@@ -83,7 +83,7 @@ div.block.info ul li a:hover {text-decoration:none;}
 
 div#header {width:100%; height:40px; padding:0; background:url(/images/sites/common/bkg_header_repeatx.jpg) repeat-x 0 0;}
 div#header div.inner_header {margin:0 auto; width:932px; height:40px;}
-div#header div.left {width:710px; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
+div#header div.left {width:810px; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
 div#header div.left.home {width:810px;}
 div#header h1 {float:left; margin:11px 0 0 0; font:normal 15px "PT Sans Bold"; color:white; text-transform:uppercase; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;}
 div#header h1 a {color:white;}
